--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -17,7 +17,7 @@ $dark:                            #444 !default;
 $positive:                        #DD4B3B !default;
 $calm:                            #FFD19F !default;
 $stable:                          #FF8949 !default;
-$royal:                           #FFCA75 !default;
+$royal:                           #FFCC7B !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../css" !default;
 
