--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -4105,8 +4105,6 @@ a.subdued {
   .bar-light .button:hover {
     color: #444;
     text-decoration: none; }
-  .bar-light .button.active, .bar-light .button.activated {
-    background-color: #fafafa; }
   .bar-light .button.button-clear {
     border-color: transparent;
     background: none;
@@ -4124,8 +4122,6 @@ a.subdued {
   .bar-stable .button:hover {
     color: #444;
     text-decoration: none; }
-  .bar-stable .button.active, .bar-stable .button.activated {
-    background-color: #e5e5e5; }
   .bar-stable .button.button-clear {
     border-color: transparent;
     background: none;
@@ -4143,8 +4139,6 @@ a.subdued {
   .bar-positive .button:hover {
     color: #fff;
     text-decoration: none; }
-  .bar-positive .button.active, .bar-positive .button.activated {
-    background-color: #c33222; }
   .bar-positive .button.button-clear {
     border-color: transparent;
     background: none;
@@ -4162,8 +4156,6 @@ a.subdued {
   .bar-calm .button:hover {
     color: #fff;
     text-decoration: none; }
-  .bar-calm .button.active, .bar-calm .button.activated {
-    background-color: #ffb96c; }
   .bar-calm .button.button-clear {
     border-color: transparent;
     background: none;
@@ -4181,8 +4173,6 @@ a.subdued {
   .bar-assertive .button:hover {
     color: #fff;
     text-decoration: none; }
-  .bar-assertive .button.active, .bar-assertive .button.activated {
-    background-color: #e42112; }
   .bar-assertive .button.button-clear {
     border-color: transparent;
     background: none;
@@ -4200,8 +4190,6 @@ a.subdued {
   .bar-balanced .button:hover {
     color: #fff;
     text-decoration: none; }
-  .bar-balanced .button.active, .bar-balanced .button.activated {
-    background-color: #28a54c; }
   .bar-balanced .button.button-clear {
     border-color: transparent;
     background: none;
@@ -4219,8 +4207,6 @@ a.subdued {
   .bar-energized .button:hover {
     color: #fff;
     text-decoration: none; }
-  .bar-energized .button.active, .bar-energized .button.activated {
-    background-color: #e6b500; }
   .bar-energized .button.button-clear {
     border-color: transparent;
     background: none;
@@ -4238,8 +4224,6 @@ a.subdued {
   .bar-royal .button:hover {
     color: #fff;
     text-decoration: none; }
-  .bar-royal .button.active, .bar-royal .button.activated {
-    background-color: #ffba4c; }
   .bar-royal .button.button-clear {
     border-color: transparent;
     background: none;
@@ -4257,8 +4241,6 @@ a.subdued {
   .bar-dark .button:hover {
     color: #fff;
     text-decoration: none; }
-  .bar-dark .button.active, .bar-dark .button.activated {
-    background-color: #262626; }
   .bar-dark .button.button-clear {
     border-color: transparent;
     background: none;
@@ -5765,7 +5747,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .item .item-content.active.item-light,
   .item .item-content.activated.item-light {
     border-color: #ccc;
-    background-color: #fafafa; }
+    background-color: #fff; }
     .item.active.item-light.item-complex > .item-content,
     .item.activated.item-light.item-complex > .item-content,
     .item-complex.active .item-content.item-light.item-complex > .item-content,
@@ -5773,7 +5755,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
     .item .item-content.active.item-light.item-complex > .item-content,
     .item .item-content.activated.item-light.item-complex > .item-content {
       border-color: #ccc;
-      background-color: #fafafa; }
+      background-color: #fff; }
   .item.active.item-stable,
   .item.activated.item-stable,
   .item-complex.active .item-content.item-stable,
@@ -5781,7 +5763,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .item .item-content.active.item-stable,
   .item .item-content.activated.item-stable {
     border-color: #a2a2a2;
-    background-color: #e5e5e5; }
+    background-color: #FF8949; }
     .item.active.item-stable.item-complex > .item-content,
     .item.activated.item-stable.item-complex > .item-content,
     .item-complex.active .item-content.item-stable.item-complex > .item-content,
@@ -5789,7 +5771,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
     .item .item-content.active.item-stable.item-complex > .item-content,
     .item .item-content.activated.item-stable.item-complex > .item-content {
       border-color: #a2a2a2;
-      background-color: #e5e5e5; }
+      background-color: #FF8949; }
   .item.active.item-positive,
   .item.activated.item-positive,
   .item-complex.active .item-content.item-positive,
@@ -5797,7 +5779,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .item .item-content.active.item-positive,
   .item .item-content.activated.item-positive {
     border-color: #c33222;
-    background-color: #c33222; }
+    background-color: #DD4B3B; }
     .item.active.item-positive.item-complex > .item-content,
     .item.activated.item-positive.item-complex > .item-content,
     .item-complex.active .item-content.item-positive.item-complex > .item-content,
@@ -5805,7 +5787,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
     .item .item-content.active.item-positive.item-complex > .item-content,
     .item .item-content.activated.item-positive.item-complex > .item-content {
       border-color: #c33222;
-      background-color: #c33222; }
+      background-color: #DD4B3B; }
   .item.active.item-calm,
   .item.activated.item-calm,
   .item-complex.active .item-content.item-calm,
@@ -5813,7 +5795,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .item .item-content.active.item-calm,
   .item .item-content.activated.item-calm {
     border-color: #ffb96c;
-    background-color: #ffb96c; }
+    background-color: #FFD19F; }
     .item.active.item-calm.item-complex > .item-content,
     .item.activated.item-calm.item-complex > .item-content,
     .item-complex.active .item-content.item-calm.item-complex > .item-content,
@@ -5821,7 +5803,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
     .item .item-content.active.item-calm.item-complex > .item-content,
     .item .item-content.activated.item-calm.item-complex > .item-content {
       border-color: #ffb96c;
-      background-color: #ffb96c; }
+      background-color: #FFD19F; }
   .item.active.item-assertive,
   .item.activated.item-assertive,
   .item-complex.active .item-content.item-assertive,
@@ -5829,7 +5811,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .item .item-content.active.item-assertive,
   .item .item-content.activated.item-assertive {
     border-color: #e42112;
-    background-color: #e42112; }
+    background-color: #ef473a; }
     .item.active.item-assertive.item-complex > .item-content,
     .item.activated.item-assertive.item-complex > .item-content,
     .item-complex.active .item-content.item-assertive.item-complex > .item-content,
@@ -5837,7 +5819,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
     .item .item-content.active.item-assertive.item-complex > .item-content,
     .item .item-content.activated.item-assertive.item-complex > .item-content {
       border-color: #e42112;
-      background-color: #e42112; }
+      background-color: #ef473a; }
   .item.active.item-balanced,
   .item.activated.item-balanced,
   .item-complex.active .item-content.item-balanced,
@@ -5845,7 +5827,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .item .item-content.active.item-balanced,
   .item .item-content.activated.item-balanced {
     border-color: #28a54c;
-    background-color: #28a54c; }
+    background-color: #33cd5f; }
     .item.active.item-balanced.item-complex > .item-content,
     .item.activated.item-balanced.item-complex > .item-content,
     .item-complex.active .item-content.item-balanced.item-complex > .item-content,
@@ -5853,7 +5835,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
     .item .item-content.active.item-balanced.item-complex > .item-content,
     .item .item-content.activated.item-balanced.item-complex > .item-content {
       border-color: #28a54c;
-      background-color: #28a54c; }
+      background-color: #33cd5f; }
   .item.active.item-energized,
   .item.activated.item-energized,
   .item-complex.active .item-content.item-energized,
@@ -5861,7 +5843,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .item .item-content.active.item-energized,
   .item .item-content.activated.item-energized {
     border-color: #e6b500;
-    background-color: #e6b500; }
+    background-color: #ffc900; }
     .item.active.item-energized.item-complex > .item-content,
     .item.activated.item-energized.item-complex > .item-content,
     .item-complex.active .item-content.item-energized.item-complex > .item-content,
@@ -5869,7 +5851,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
     .item .item-content.active.item-energized.item-complex > .item-content,
     .item .item-content.activated.item-energized.item-complex > .item-content {
       border-color: #e6b500;
-      background-color: #e6b500; }
+      background-color: #ffc900; }
   .item.active.item-royal,
   .item.activated.item-royal,
   .item-complex.active .item-content.item-royal,
@@ -5877,7 +5859,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .item .item-content.active.item-royal,
   .item .item-content.activated.item-royal {
     border-color: #ffba4c;
-    background-color: #ffba4c; }
+    background-color: #FFCA75; }
     .item.active.item-royal.item-complex > .item-content,
     .item.activated.item-royal.item-complex > .item-content,
     .item-complex.active .item-content.item-royal.item-complex > .item-content,
@@ -5885,7 +5867,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
     .item .item-content.active.item-royal.item-complex > .item-content,
     .item .item-content.activated.item-royal.item-complex > .item-content {
       border-color: #ffba4c;
-      background-color: #ffba4c; }
+      background-color: #FFCA75; }
   .item.active.item-dark,
   .item.activated.item-dark,
   .item-complex.active .item-content.item-dark,
@@ -5893,7 +5875,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .item .item-content.active.item-dark,
   .item .item-content.activated.item-dark {
     border-color: #000;
-    background-color: #262626; }
+    background-color: #444; }
     .item.active.item-dark.item-complex > .item-content,
     .item.activated.item-dark.item-complex > .item-content,
     .item-complex.active .item-content.item-dark.item-complex > .item-content,
@@ -5901,7 +5883,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
     .item .item-content.active.item-dark.item-complex > .item-content,
     .item .item-content.activated.item-dark.item-complex > .item-content {
       border-color: #000;
-      background-color: #262626; }
+      background-color: #444; }
 
 .item,
 .item h1,
@@ -5994,10 +5976,10 @@ a.item-content {
   color: #444; }
   .item-complex.item-light > .item-content.active, .item-complex.item-light > .item-content:active {
     border-color: #ccc;
-    background-color: #fafafa; }
+    background-color: #fff; }
     .item-complex.item-light > .item-content.active.item-complex > .item-content, .item-complex.item-light > .item-content:active.item-complex > .item-content {
       border-color: #ccc;
-      background-color: #fafafa; }
+      background-color: #fff; }
 
 .item-complex.item-stable > .item-content {
   border-color: #b2b2b2;
@@ -6005,10 +5987,10 @@ a.item-content {
   color: #444; }
   .item-complex.item-stable > .item-content.active, .item-complex.item-stable > .item-content:active {
     border-color: #a2a2a2;
-    background-color: #e5e5e5; }
+    background-color: #FF8949; }
     .item-complex.item-stable > .item-content.active.item-complex > .item-content, .item-complex.item-stable > .item-content:active.item-complex > .item-content {
       border-color: #a2a2a2;
-      background-color: #e5e5e5; }
+      background-color: #FF8949; }
 
 .item-complex.item-positive > .item-content {
   border-color: #c33222;
@@ -6016,10 +5998,10 @@ a.item-content {
   color: #fff; }
   .item-complex.item-positive > .item-content.active, .item-complex.item-positive > .item-content:active {
     border-color: #c33222;
-    background-color: #c33222; }
+    background-color: #DD4B3B; }
     .item-complex.item-positive > .item-content.active.item-complex > .item-content, .item-complex.item-positive > .item-content:active.item-complex > .item-content {
       border-color: #c33222;
-      background-color: #c33222; }
+      background-color: #DD4B3B; }
 
 .item-complex.item-calm > .item-content {
   border-color: #ffb96c;
@@ -6027,10 +6009,10 @@ a.item-content {
   color: #fff; }
   .item-complex.item-calm > .item-content.active, .item-complex.item-calm > .item-content:active {
     border-color: #ffb96c;
-    background-color: #ffb96c; }
+    background-color: #FFD19F; }
     .item-complex.item-calm > .item-content.active.item-complex > .item-content, .item-complex.item-calm > .item-content:active.item-complex > .item-content {
       border-color: #ffb96c;
-      background-color: #ffb96c; }
+      background-color: #FFD19F; }
 
 .item-complex.item-assertive > .item-content {
   border-color: #e42112;
@@ -6038,10 +6020,10 @@ a.item-content {
   color: #fff; }
   .item-complex.item-assertive > .item-content.active, .item-complex.item-assertive > .item-content:active {
     border-color: #e42112;
-    background-color: #e42112; }
+    background-color: #ef473a; }
     .item-complex.item-assertive > .item-content.active.item-complex > .item-content, .item-complex.item-assertive > .item-content:active.item-complex > .item-content {
       border-color: #e42112;
-      background-color: #e42112; }
+      background-color: #ef473a; }
 
 .item-complex.item-balanced > .item-content {
   border-color: #28a54c;
@@ -6049,10 +6031,10 @@ a.item-content {
   color: #fff; }
   .item-complex.item-balanced > .item-content.active, .item-complex.item-balanced > .item-content:active {
     border-color: #28a54c;
-    background-color: #28a54c; }
+    background-color: #33cd5f; }
     .item-complex.item-balanced > .item-content.active.item-complex > .item-content, .item-complex.item-balanced > .item-content:active.item-complex > .item-content {
       border-color: #28a54c;
-      background-color: #28a54c; }
+      background-color: #33cd5f; }
 
 .item-complex.item-energized > .item-content {
   border-color: #e6b500;
@@ -6060,10 +6042,10 @@ a.item-content {
   color: #fff; }
   .item-complex.item-energized > .item-content.active, .item-complex.item-energized > .item-content:active {
     border-color: #e6b500;
-    background-color: #e6b500; }
+    background-color: #ffc900; }
     .item-complex.item-energized > .item-content.active.item-complex > .item-content, .item-complex.item-energized > .item-content:active.item-complex > .item-content {
       border-color: #e6b500;
-      background-color: #e6b500; }
+      background-color: #ffc900; }
 
 .item-complex.item-royal > .item-content {
   border-color: #ffba4c;
@@ -6071,10 +6053,10 @@ a.item-content {
   color: #fff; }
   .item-complex.item-royal > .item-content.active, .item-complex.item-royal > .item-content:active {
     border-color: #ffba4c;
-    background-color: #ffba4c; }
+    background-color: #FFCA75; }
     .item-complex.item-royal > .item-content.active.item-complex > .item-content, .item-complex.item-royal > .item-content:active.item-complex > .item-content {
       border-color: #ffba4c;
-      background-color: #ffba4c; }
+      background-color: #FFCA75; }
 
 .item-complex.item-dark > .item-content {
   border-color: #111;
@@ -6082,10 +6064,10 @@ a.item-content {
   color: #fff; }
   .item-complex.item-dark > .item-content.active, .item-complex.item-dark > .item-content:active {
     border-color: #000;
-    background-color: #262626; }
+    background-color: #444; }
     .item-complex.item-dark > .item-content.active.item-complex > .item-content, .item-complex.item-dark > .item-content:active.item-complex > .item-content {
       border-color: #000;
-      background-color: #262626; }
+      background-color: #444; }
 
 /**
  * Item Icons
@@ -8529,7 +8511,7 @@ progress {
   min-height: 47px;
   border-width: 1px;
   border-style: solid;
-  border-radius: 4px;
+  border-radius: 2px;
   vertical-align: top;
   text-align: center;
   text-overflow: ellipsis;
@@ -8539,8 +8521,6 @@ progress {
   .button:hover {
     color: #444;
     text-decoration: none; }
-  .button.active, .button.activated {
-    background-color: #e5e5e5; }
   .button:after {
     position: absolute;
     top: -6px;
@@ -8576,8 +8556,6 @@ progress {
     .button.button-light:hover {
       color: #444;
       text-decoration: none; }
-    .button.button-light.active, .button.button-light.activated {
-      background-color: #fafafa; }
     .button.button-light.button-clear {
       border-color: transparent;
       background: none;
@@ -8601,8 +8579,6 @@ progress {
     .button.button-stable:hover {
       color: #444;
       text-decoration: none; }
-    .button.button-stable.active, .button.button-stable.activated {
-      background-color: #e5e5e5; }
     .button.button-stable.button-clear {
       border-color: transparent;
       background: none;
@@ -8626,8 +8602,6 @@ progress {
     .button.button-positive:hover {
       color: #fff;
       text-decoration: none; }
-    .button.button-positive.active, .button.button-positive.activated {
-      background-color: #c33222; }
     .button.button-positive.button-clear {
       border-color: transparent;
       background: none;
@@ -8651,8 +8625,6 @@ progress {
     .button.button-calm:hover {
       color: #fff;
       text-decoration: none; }
-    .button.button-calm.active, .button.button-calm.activated {
-      background-color: #ffb96c; }
     .button.button-calm.button-clear {
       border-color: transparent;
       background: none;
@@ -8676,8 +8648,6 @@ progress {
     .button.button-assertive:hover {
       color: #fff;
       text-decoration: none; }
-    .button.button-assertive.active, .button.button-assertive.activated {
-      background-color: #e42112; }
     .button.button-assertive.button-clear {
       border-color: transparent;
       background: none;
@@ -8701,8 +8671,6 @@ progress {
     .button.button-balanced:hover {
       color: #fff;
       text-decoration: none; }
-    .button.button-balanced.active, .button.button-balanced.activated {
-      background-color: #28a54c; }
     .button.button-balanced.button-clear {
       border-color: transparent;
       background: none;
@@ -8726,8 +8694,6 @@ progress {
     .button.button-energized:hover {
       color: #fff;
       text-decoration: none; }
-    .button.button-energized.active, .button.button-energized.activated {
-      background-color: #e6b500; }
     .button.button-energized.button-clear {
       border-color: transparent;
       background: none;
@@ -8751,8 +8717,6 @@ progress {
     .button.button-royal:hover {
       color: #fff;
       text-decoration: none; }
-    .button.button-royal.active, .button.button-royal.activated {
-      background-color: #ffba4c; }
     .button.button-royal.button-clear {
       border-color: transparent;
       background: none;
@@ -8776,8 +8740,6 @@ progress {
     .button.button-dark:hover {
       color: #fff;
       text-decoration: none; }
-    .button.button-dark.active, .button.button-dark.activated {
-      background-color: #262626; }
     .button.button-dark.button-clear {
       border-color: transparent;
       background: none;
@@ -8953,12 +8915,12 @@ a.button {
   .button-bar > .button .icon:before {
     line-height: 44px; }
   .button-bar > .button:first-child {
-    border-radius: 4px 0px 0px 4px; }
+    border-radius: 2px 0px 0px 2px; }
   .button-bar > .button:last-child {
     border-right-width: 1px;
-    border-radius: 0px 4px 4px 0px; }
+    border-radius: 0px 2px 2px 0px; }
   .button-bar > .button:only-child {
-    border-radius: 4px; }
+    border-radius: 2px; }
 
 .button-bar > .button-small:before,
 .button-bar > .button-small .icon:before {
