--- a/www/lib/ionic/scss/_mixins.scss
+++ b/www/lib/ionic/scss/_mixins.scss
@@ -15,7 +15,7 @@
   &.active,
   &.activated {
     //border-color: transparent;//$active-border-color;
-    background-color: $active-bg-color;
+//    background-color: $active-bg-color;
     //box-shadow: inset 0 1px 4px rgba(0,0,0,0.1);
   }
 }
